kubernetes/web-app-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web-app
  labels:
    name: web-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: flask
        image: uscictdocker/mentorpal-web-app
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
