kubernetes/classifier-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: classifier-api
  labels:
    service: classifier-api
spec:
  selector:
    app: classifier-api
  ports:
  - port: 5000
    targetPort: 5000
