kubernetes/mentor-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mentor-api
  labels:
    service: mentor-api
spec:
  selector:
    app: mentor-api
  ports:
  - port: 5000
    targetPort: 5000
