kubernetes/web-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  labels:
    service: web-app
spec:
  selector:
    app: web-app
  ports:
  - port: 3000
    targetPort: 3000
